# dnn-watermark

./: .gitignore  README.md  dev_requirements.txt  explo.ipynb  requirements.txt
dataset-generation/: __init__.py  generate_dataset.py  main.py
dataset-generation/utils/: download_dataset.py  watermarks_generator.py
examples/: model_explo.ipynb
frontend/: presentation.py  service.py
models/detr/: detr.ipynb  requirements.txt
models/faster-rcnn/: faster-rcnn.ipynb
models/yolo/: metadata_bench.yml  requirements.txt  yolo.ipynb
pita_tool/: Makefile  pita.py  pyproject.toml  requirements.txt
pita_tool/dataset_generation/: __init__.py  annotation.py  dataset.py  dataset_generation.py  download_dataset.py  generate_dataset.py  utils.py  watermarks_generator.py
pita_tool/dataset_generation/utils/: download_dataset.py  watermarks_generator.py
pita_tool/pita_dataset/: __init__.py  dataset.py  dataset_generation.py  download_dataset.py  exceptions.py  hf_utils.py  utils.py  watermarks_generator.py  yolo_annotations.py
pita_tool/pita_dataset/train/: metadata.jsonl
script/: fine_tune.py  generate_dataset.py  preprocess_clwd.py  push_dataset_to_hub.py  watermarks_generator.py
watermarked_dataset_generation/: main.py  pita.py
watermarked_dataset_generation/dataset_generation/: generate_dataset.py
